# BambuMate

./: .gitattributes  .gitignore  Cargo.toml  PRD_BambuPrintIQ.md  README.md  index.html
.github/workflows/: build.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/: app.rs  commands.rs  main.rs  theme.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/config/: defect_rules.toml
src-tauri/icons/: icon.icns
src-tauri/resources/model_catalog/: kimi_alias.toml
src-tauri/src/: error.rs  lib.rs  main.rs  process_command.rs  stl_watcher.rs  str_utils.rs
src-tauri/src/analyzer/: image_prep.rs  mod.rs  prompts.rs  types.rs  vision.rs
src-tauri/src/commands/: analyzer.rs  batch.rs  config.rs  health.rs  history.rs  keychain.rs  launcher.rs  mod.rs  models.rs  profile.rs  scraper.rs  stl_bridge.rs  updater.rs
src-tauri/src/history/: mod.rs  store.rs  types.rs
src-tauri/src/mapper/: engine.rs  mod.rs  rules.rs  types.rs
src-tauri/src/model_catalog/: catalog.rs  mod.rs  recommend.rs
src-tauri/src/profile/: generator.rs  inheritance.rs  mod.rs  paths.rs  reader.rs  registry.rs  types.rs  writer.rs
src-tauri/src/scraper/: cache.rs  catalog.rs  extraction.rs  html_extractor.rs  http_client.rs  mod.rs  prompts.rs  types.rs  validation.rs  web_search.rs
src-tauri/src/scraper/adapters/: bambu.rs  creality.rs  elegoo.rs  esun.rs  hatchbox.rs  inland.rs  mod.rs  overture.rs  polymaker.rs  prusament.rs  spoolscout.rs  sunlu.rs
src-tauri/tests/: profile_tests.rs
src-tauri/tests/fixtures/: sample_profile.info  sample_profile.json
src/components/: api_key_form.rs  change_preview.css  change_preview.rs  defect_report.css  defect_report.rs  filament_card.rs  history_panel.css  history_panel.rs  mod.rs  profile_preview.rs  searchable_select.css  searchable_select.rs  settings_merge.rs  sidebar.rs  specs_editor.rs  status_badge.rs  stl_indicator.rs
src/pages/: about.rs  batch_generate.css  batch_generate.rs  filament_search.css  filament_search.rs  health.rs  home.rs  mod.rs  print_analysis.css  print_analysis.rs  profile_diff.css  profile_diff.rs  profile_management.css  profile_management.rs  (+2 more)
style/: main.css
tests/: ui_behavior.rs
(+38 files in other folders)
