[package]
name = "bambumate"
version = "0.1.0"
edition = "2021"
description = "Desktop app for optimized Bambu Studio filament profiles"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_router = { version = "0.8" }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
