[package]
name = "bambumate-tauri"
version = "0.1.0"
edition = "2021"
description = "BambuMate Tauri backend"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
keyring = { version = "3.6", features = ["apple-native"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6.0"
reqwest = { version = "0.12", features = ["json"] }
walkdir = "2.5"
tempfile = "3.24"

[build-dependencies]
tauri-build = { version = "2", features = [] }
